<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoffeeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="339dp"
        android:layout_height="171dp"
        android:contentDescription="@string/describe_coffee"
        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/coffee" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Cream"
        app:layout_constraintBottom_toTopOf="@+id/checkBox3"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="28dp"
        android:text="@string/Caramel"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="32dp"
        android:text="@string/Milk"
        app:layout_constraintBottom_toTopOf="@+id/checkBox5"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="260dp"
        android:text="@string/Syrup"
        app:layout_constraintBottom_toTopOf="@+id/add_to_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="36dp"
        android:text="@string/Whipped_Cream"
        app:layout_constraintBottom_toTopOf="@+id/coffee_size"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/coffee_size"
        android:layout_width="162dp"
        android:layout_height="35dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/coffee_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/coffee_number"
        android:layout_width="166dp"
        android:layout_height="37dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_to_order"
        android:layout_width="127dp"
        android:layout_height="58dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/price" />

    <TextView
        android:id="@+id/price"
        android:layout_width="166dp"
        android:layout_height="38dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>