<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sales_tax"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:text="@string/total"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/order_items"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="@string/title_order"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/sub_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/sub_total"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sub_total"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/sales_tax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/sales_tax"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginBottom="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/total_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/total_price"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/order_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/order_items"
        android:layout_width="414dp"
        android:layout_height="247dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/delete_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/delete_item"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/place_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toEndOf="@+id/delete_item" />
</androidx.constraintlayout.widget.ConstraintLayout>